--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api",
   "version": "1.0.0",
   "description": "for api",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "test"
   },
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "4.19.2"
-  }
+    "express": "^4.19.2"
+  },
+  "devDependencies": {}
 }
